fix(css): misaligned boards between p1 and p2

--- a/src/style.css
+++ b/src/style.css
@@ -156,7 +156,6 @@ main {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: var(--big-padding);
   padding: var(--big-padding);
   background-color: white;
 }
